apps/minecraft/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/target: homelab-tunnel.mbund.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    hajimari.io/enable: "false"
spec:
  ingressClassName: public-nginx
  rules:
    - host: mc.mbund.org
      http:
        paths:
          - backend:
              service:
                name: minecraft-minecraft
                port:
                  name: http
            path: /
            pathType: Prefix
